--- a/okaeri/src/App.css
+++ b/okaeri/src/App.css
@@ -36,3 +36,47 @@
     transform: rotate(360deg);
   }
 }
+
+.carousel {
+  position: absolute;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 45%;
+  border-radius: 10px;
+  object-fit: fill;
+  margin: 10px;
+}
+
+.leftArrow {
+  position: absolute;
+  left: 32px;
+  top: 50%;
+  color: #000;
+  width: 10%;
+  height: 10%;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+}
+
+.rightArrow {
+  position: absolute;
+  right: 32px;
+  top: 50%;
+  color: #000;
+  width: 10%;
+  height: 10%;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+}
+
+.carousel {
+  z-index: 0;
+  position: absolute;
+}
